# src/main/java/eu/pinske/playground/web/ThingApiController.java
@@ -2,9 +2,12 @@ package eu.pinske.playground.web;
 
 import static java.util.stream.Collectors.toList;
 
+import java.io.IOException;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.InputStreamResource;
+import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.transaction.annotation.Transactional;
@@ -39,6 +42,12 @@ public class ThingApiController implements ThingApi {
 	}
 
 	@Override
+	public ResponseEntity<Resource> getThingData(Long id) {
+		return thingRepository.findById(id).filter(Thing::hasData).map(Thing::getData).map(InputStreamResource::new)
+				.map(Resource.class::cast).map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
+	}
+
+	@Override
 	public ResponseEntity<Void> createThing(ThingDto thing) {
 		Thing t = new Thing();
 		t.setName(thing.getName());
@@ -55,12 +64,32 @@ public class ThingApiController implements ThingApi {
 	}
 
 	@Override
+	public ResponseEntity<Void> changeThingData(Long id, Resource body) {
+		thingRepository.findById(id).ifPresent(t -> {
+			try {
+				t.setData(body.getInputStream());
+			} catch (IOException e) {
+				throw new IllegalStateException(e);
+			}
+		});
+		return ResponseEntity.ok().build();
+	}
+
+	@Override
 	public ResponseEntity<Void> deleteThing(Long id) {
 		thingRepository.deleteById(id);
 		return ResponseEntity.ok().build();
 	}
 
+	@Override
+	public ResponseEntity<Void> deleteThingData(Long id) {
+		thingRepository.findById(id).ifPresent(t -> {
+			t.setData(null);
+		});
+		return ResponseEntity.ok().build();
+	}
+
 	private ThingDto map(Thing t) {
-		return new ThingDto().id(t.getId()).name(t.getName());
+		return new ThingDto().id(t.getId()).name(t.getName()).data(t.hasData());
 	}
 }
